--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                                 souris, comme pour sélectionner des fichiers sur votre ordinateur.
                                             </p>
                                             <p>
-                                                <img src="Gifs/classer.gif" width="100%">
+                                                <img src="images/classer.gif" width="100%">
 
                                             </p>
 
