--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div id="reload">
-        <button type="button" class="btn btn-default btn-sm">Small button</button>
+        <button type="button" class="btn btn-default btn-sm">Revenir à l'accueil</button>
     </div>
     <div id="tutorials">
         <h2>Créer des produits</h2>
