--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <br>
                                 <br>
                                 <p>Vous pouvez sélectionner et classer des produits comme vous le faites quand vous déplacez des fichiers sur votre ordinateur.</p>
-                                <img src="images/classer.gif" alt="">
+                                <img src="images/classer.gif" alt="" width="95%">
                                 <p>Vous pouvez sélectionner plusieurs produits d'affiler en utilisant la touche SHIFT + clique de souris, ou en utilisant CTRL + clique de souris, comme pour sélectionner des fichiers sur votre ordinateur.</p>
 
                         </li>
