--- a/index.html
+++ b/index.html
@@ -130,16 +130,24 @@
                 <li>Classer des produits
                     <ul>
                         <li>
-                                <p><b>Tutoriel</b></p>
-                                <p>Pour classer vos produits cliquez dans le menu centrale sur le bouton</p>
-                                <br>
-                                <img src="images/classification.jpg" alt="">
-                                <br>
-                                <br>
-                                <p>Vous pouvez sélectionner et classer des produits comme vous le faites quand vous déplacez des fichiers sur votre ordinateur.</p>
-                                <img src="images/classer.gif" alt="" width="95%">
-                                <p>Vous pouvez sélectionner plusieurs produits d'affiler en utilisant la touche SHIFT + clique de souris, ou en utilisant CTRL + clique de souris, comme pour sélectionner des fichiers sur votre ordinateur.</p>
-
+                            <p><b>Tutoriel</b></p>
+                            <p>Pour classer vos produits cliquez dans le menu centrale sur le bouton</p>
+                            <br>
+                            <img src="images/classification.jpg" alt="">
+                            <br>
+                            <br>
+                            <p>Vous pouvez sélectionner et classer des produits comme vous le faites quand vous déplacez des fichiers sur votre ordinateur. <b>La classification se fait dans le menu de droite.</b></p>
+                            <img src="images/classer.gif" alt="" width="95%">
+                            <p>Vous pouvez sélectionner plusieurs produits d'affiler en utilisant la touche SHIFT + clique de souris, ou en utilisant CTRL + clique de souris, comme pour sélectionner des fichiers sur votre ordinateur.</p>
+                            <p>
+                                <b>Comment changer de catégorie?</b><br>
+                                Pour changer de catégorie il vous suffit de faire la même chose que pour classer un produit.
+                            </p>
+                            <p>
+                                <b>Le panneau pour classer les produits n'est pas visible</b><br>
+                                Si le panneau de droite est masqué cliquez en haut à droite sur le bouton suivant :
+                                <img src="images/show_classification.jpg" alt="">
+                            </p>
                         </li>
                     </ul>
                 </li>
