--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div id="help">
             <h2>Aide</h2>
             <ul>
-                <li>J'ai un problème
+                <li>J'ai un problème, aidez-moi
                     <ul>
                         <li>Est-ce que vous utiliser Google Chrome comme navigateur?
                             <ul>
