--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
                 <li>Ajouter des images</li>
                 <li>Publier des produits</li>
                 <li>Supprimer des produits</li>
+                <li>Rechercher une liste de produits</li>
+                <li>Filtrer des produits</li>
+                <li>Exporter les données saisies</li>
             </ul>
             <br>
         </div>
@@ -173,14 +176,91 @@
                                     <ul>
                                         <li>Est-ce que votre navigateur est à jour?
                                             <ul>
-                                                <li>Oui</li>
-                                                <li>Non</li>
-                                                <li>Je ne sais pas</li>
+                                                <li>Oui
+                                                    <ul>
+                                                        <li>Est-ce que le zoom d'affichage du navigateur est à 100%?
+                                                            <ul>
+                                                                <li>Oui
+                                                                    <ul>
+                                                                        <li>Est-ce que tous les utilisateurs rencontrent le même problème?
+                                                                            <ul>
+                                                                                <li>Oui</li>
+                                                                                <li>Non</li>
+                                                                            </ul>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                                <li>Non
+                                                                    <ul>
+                                                                        <li>
+                                                                            <p><b>Solution</b></p>
+                                                                            <br>
+                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page cliquant simultanément sur les touches Ctrl + Shift + R.</p>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                                <li>Je ne sais pas
+                                                                    <ul>
+                                                                        <li>
+                                                                            <p><b>Solution</b></p>
+                                                                            <br>
+                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page cliquant simultanément sur les touches Ctrl + Shift + R.</p>
+                                                                        </li>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                                <li>Non
+                                                    <ul>
+                                                        <li>
+                                                            <p><b>Solution</b></p>
+                                                            <br>
+                                                            <p>Mettez à jour votre navigateur. Pour mettre à jour votre navigateur :</p>
+                                                            <ol>
+                                                            <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
+                                                            <li> Puis sur Aide > A propos de Google de Chrome.</li>
+                                                            <li>Puis cliquez sur Mettre à jour.</li>
+                                                            </ol>
+                                                            <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                                <li>Je ne sais pas
+                                                    <ul>
+                                                        <li>
+                                                            <p><b>Solution</b></p>
+                                                            <br>
+                                                            <p>Mettez à jour votre navigateur. Pour mettre à jour votre navigateur :</p>
+                                                            <ol>
+                                                            <li>
+                                                                Cliquez sur les trois points verticaux en haut en droite.
+                                                            </li>
+                                                            <li>
+                                                                Puis sure Aide > A propos de Google de Chrome.
+                                                            </li>
+                                                            <li>
+                                                                Puis cliquez sur Mettre à jour.
+                                                            </li>
+                                                            </ol>
+                                                            <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                        </li>
+                                                    </ul>
+                                                </li>
                                             </ul>
                                         </li>
                                     </ul>
                                 </li>
-                                <li>Non</li>
+                                <li>Non
+                                    <ul>
+                                        <li>
+                                            <p><b>Solution</b></p>
+                                            <br>
+                                            <p>Installez google Chrome : <a href="https://www.google.fr/chrome">https://www.google.fr/chrome</a></p>
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                     </ul>
