--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <ul>
                 <li>Créer des produits
                     <ul>
-                        <li>Quel méthode souhaitez-vous utiliser?
+                        <li>Quelle méthode souhaitez-vous utiliser?
                             <ul>
-                                <li>Je veux créer des produits directement dans l'inteface</li>
+                                <li>Je veux créer des produits directement dans l'interface</li>
                                 <li>Je veux télécharger un template et travailler sur Excel</li>
-                                <li>J'ai un fichier dans mon format que je souhaites importer</li>
-                                <li>Je ne sais pas répondre, aidez-moi à chosir
+                                <li>J'ai un fichier dans mon format que je souhaite importer</li>
+                                <li>Je ne sais pas répondre, aidez-moi à choisir
                                     <ul>
                                         <li>Combien de produits souhaitez-vous créer?
                                             <ul>
@@ -132,14 +132,14 @@
                     <ul>
                         <li>
                             <p><b>Tutoriel</b></p>
-                            <p>Pour classer vos produits cliquez dans le menu centrale sur le bouton</p>
+                            <p>Pour classer vos produits cliquez dans le menu central sur le bouton :</p>
                             <br>
                             <img src="images/classification.jpg" alt="">
                             <br>
                             <br>
                             <p>Vous pouvez sélectionner et classer des produits comme vous le faites quand vous déplacez des fichiers sur votre ordinateur. <b>La classification se fait dans le menu de droite.</b></p>
                             <img src="images/classer.gif" alt="" width="95%">
-                            <p>Vous pouvez sélectionner plusieurs produits d'affiler en utilisant la touche SHIFT + clique de souris, ou en utilisant CTRL + clique de souris, comme pour sélectionner des fichiers sur votre ordinateur.</p>
+                            <p>Vous pouvez sélectionner plusieurs produits d'affilé en utilisant la touche SHIFT + clic de souris, ou en utilisant CTRL + clic de souris, comme pour sélectionner des fichiers sur votre ordinateur.</p>
                             <hr>
                             <h2>Questions posées fréquement</h2>
                             <p>
@@ -159,7 +159,7 @@
                 <li>Ajouter des images</li>
                 <li>Publier des produits</li>
                 <li>Supprimer des produits</li>
-                <li>Rechercher une liste de produits</li>
+                <li>Rechercher une liste de produit</li>
                 <li>Filtrer des produits</li>
                 <li>Exporter les données saisies</li>
             </ul>
@@ -170,7 +170,7 @@
             <ul>
                 <li>J'ai un problème, aidez-moi
                     <ul>
-                        <li>Est-ce que vous utiliser Google Chrome comme navigateur?
+                        <li>Est-ce que vous utilisez Google Chrome comme navigateur?
                             <ul>
                                 <li>Oui
                                     <ul>
@@ -195,7 +195,7 @@
                                                                         <li>
                                                                             <p><b>Solution</b></p>
                                                                             <br>
-                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page cliquant simultanément sur les touches Ctrl + Shift + R.</p>
+                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page en cliquant simultanément sur les touches Ctrl + Shift + R.</p>
                                                                         </li>
                                                                     </ul>
                                                                 </li>
@@ -204,7 +204,8 @@
                                                                         <li>
                                                                             <p><b>Solution</b></p>
                                                                             <br>
-                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page cliquant simultanément sur les touches Ctrl + Shift + R.</p>
+                                                                            <p>Pour mettre le zoom à 100% cliquez simultanément sur Ctrl + 0, ou cliquez dans votre barre de recherche sur le zoom et cliquez sur réinitialiser. Enfin rafraichissez la page en 
+                                                                                cliquant simultanément sur les touches Ctrl + Shift + R.</p>
                                                                         </li>
                                                                     </ul>
                                                                 </li>
@@ -234,15 +235,9 @@
                                                             <br>
                                                             <p>Mettez à jour votre navigateur. Pour mettre à jour votre navigateur :</p>
                                                             <ol>
-                                                            <li>
-                                                                Cliquez sur les trois points verticaux en haut en droite.
-                                                            </li>
-                                                            <li>
-                                                                Puis sure Aide > A propos de Google de Chrome.
-                                                            </li>
-                                                            <li>
-                                                                Puis cliquez sur Mettre à jour.
-                                                            </li>
+                                                            <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
+                                                            <li> Puis sur Aide > A propos de Google de Chrome.</li>
+                                                            <li>Puis cliquez sur Mettre à jour.</li>
                                                             </ol>
                                                             <p>Enfin fermez et redémarrez votre navigateur.</p>
                                                         </li>
