--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         #main  {           
             padding-top: 70px;
         }
+        #first_usage {
+            display: none;
+        }
+        #first_usage ul {
+            padding: 0;
+            list-style-type: none;
+            margin-bottom: 0;
+        }
+
         #learn { 
             display: none;
         }
@@ -90,7 +99,7 @@
 </head>
 <body>
     <div id="reload">
-        <button id="reload-btn" type="button" class="btn btn-default btn-sm">Revenir à l'accueil</button>
+        <button id="reload-btn" type="button" class="btn btn-default btn-sm">Revenir à l'assistant</button>
     </div>
     <!-- <div id="tutorials">
         <h2>Créer des produits</h2>
@@ -102,6 +111,40 @@
         <br>
     </div> -->
     <div id="main">
+        <div id="first_usage">
+            <h2>Première utilisation</h2>
+            <ul>
+                <li>Créer et publier des produits
+                    <ul>
+                        <li>
+                            <p><b>Solution</b></p>
+                            <p>Ce tutoriel va vous guider pour créer et publier vos produits.</p>
+                            <br>
+                            <p>Pour publier vos produits vous aurez à effectuer les 5 étapes suivantes :</p>
+                            <p>
+                                <ol>
+                                    <li>Créer des produits dans l'interface</li>
+                                    <li>Classer ces produits dans les catégories disponibles</li>
+                                    <li>Compléter les attributs</li>
+                                    <li>Ajouter des images</li>
+                                    <li>Publier vos produits lorsque vous le souhaitez</li>
+                                </ol>
+                            </p>
+                            <br>
+                            <div class="alert alert-primary" role="alert">
+                                <strong>A savoir : </strong>tant que vous ne faites pas l'action de publication vos produits ne peuvent pas être visible par votre distributeur. Tout ce que vous faites sur cette plateforme vous est entièrement confidentiel.
+                            </div>
+                            <p>Pour chacune des étapes ci-dessus vous pouvez utiliser l'assistant pour vous aider à vous guider. Pour la première étape, la création de produits dans l'interface, il existe <b>différentes méthodes de création de produits en fonction de votre besoin</b>.</p>
+                            <br>
+                            <p>Cliquez sur le bouton revenir à l'assistant en haut à droite et sélectionnez le tutoriel <b>Créer des produits</b> dans la section "Se former" puis faites de même pour les autres étapes.</p>
+                            <br>
+                            <p>Très bonne publication.</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <br>
+        </div>
         <div id="learn">
             <h2>Se former</h2>
             <ul>
@@ -297,7 +340,7 @@
         };
 
         function init() {
-            var blocs = ["learn", "help"];
+            var blocs = ["first_usage", "learn", "help"];
             blocs.forEach(element => {
                 // Add class
                 $('#'+element+' > ul').find('li').each(function (index) {
@@ -312,13 +355,21 @@
                     var element_name = event.data.name;
                     var position = $(this).index() + 1;
                     if (path == '> ul') {
-                        if (element_name == 'learn') {
+                        if (element_name == 'first_usage') {
+                            $('#help').hide();
+                            $('#learn').hide();
+                            var title = $('#first_usage > ul > li:nth-child('+position+')').clone().children().remove().end().text().trim();
+                            $('#first_usage > h2').html(title);
+                            $('#first_usage > ul > li:nth-child('+position+')').html($('#first_usage > ul > li:nth-child('+position+')').html().replace(title, ''));
+                        } else if (element_name == 'learn') {
+                            $('#first_usage').hide();
                             $('#help').hide();
                             var title = $('#learn > ul > li:nth-child('+position+')').clone().children().remove().end().text().trim();
                             $('#learn > h2').html(title);
                             $('#learn > ul > li:nth-child('+position+')').html($('#learn > ul > li:nth-child('+position+')').html().replace(title, ''));
-                        } else {
+                        } else if (element_name == 'help') {
                             $('#learn').hide();
+                            $('#first_usage').hide();
                             var title = $('#help > ul > li:nth-child('+position+')').clone().children().remove().end().text().trim();
                             $('#help > h2').html(title);
                             $('#help > ul > li:nth-child('+position+')').html($('#help > ul > li:nth-child('+position+')').html().replace(title, ''));
