--- a/index.html
+++ b/index.html
@@ -261,13 +261,16 @@
                                                         <li>
                                                             <p><b>Solution</b></p>
                                                             <br>
-                                                            <p>Mettez à jour votre navigateur. Pour mettre à jour votre navigateur :</p>
-                                                            <ol>
-                                                            <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
-                                                            <li> Puis sur Aide > A propos de Google de Chrome.</li>
-                                                            <li>Puis cliquez sur Mettre à jour.</li>
-                                                            </ol>
-                                                            <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                            <div class="alert alert-success" role="alert">
+                                                                <h4 class="alert-heading">J'ai une solution!</h4>
+                                                                <p><strong>Mettez à jour votre navigateur.</strong> Pour mettre à jour votre navigateur :</p>
+                                                                <ol>
+                                                                <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
+                                                                <li> Puis sur Aide > A propos de Google de Chrome.</li>
+                                                                <li>Puis cliquez sur Mettre à jour.</li>
+                                                                </ol>
+                                                                <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                            </div>
                                                         </li>
                                                     </ul>
                                                 </li>
@@ -276,13 +279,16 @@
                                                         <li>
                                                             <p><b>Solution</b></p>
                                                             <br>
-                                                            <p>Mettez à jour votre navigateur. Pour mettre à jour votre navigateur :</p>
-                                                            <ol>
-                                                            <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
-                                                            <li> Puis sur Aide > A propos de Google de Chrome.</li>
-                                                            <li>Puis cliquez sur Mettre à jour.</li>
-                                                            </ol>
-                                                            <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                            <div class="alert alert-success" role="alert">
+                                                                <h4 class="alert-heading">J'ai une solution!</h4>
+                                                                <p><strong>Mettez à jour votre navigateur.</strong> Pour mettre à jour votre navigateur :</p>
+                                                                <ol>
+                                                                <li>Cliquez sur les trois points verticaux <img src="images/chrome_settings.jpg" alt=""> en haut en droite du navigateur.</li>
+                                                                <li> Puis sur Aide > A propos de Google de Chrome.</li>
+                                                                <li>Puis cliquez sur Mettre à jour.</li>
+                                                                </ol>
+                                                                <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                            </div>
                                                         </li>
                                                     </ul>
                                                 </li>
@@ -295,7 +301,11 @@
                                         <li>
                                             <p><b>Solution</b></p>
                                             <br>
-                                            <p>Installez google Chrome : <a href="https://www.google.fr/chrome">https://www.google.fr/chrome</a></p>
+                                            <div class="alert alert-success" role="alert">
+                                                <h4 class="alert-heading">J'ai une solution!</h4>
+                                                <p>Installez google Chrome : <a href="https://www.google.fr/chrome">https://www.google.fr/chrome</a></p>
+                                                <p>Google Chrome est obligatoire pour la bonne utilisation de la plateforme.</p>
+                                            </div>                                            
                                         </li>
                                     </ul>
                                 </li>
