--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div id="first_usage">
             <h2>Première utilisation</h2>
             <ul>
-                <li>Créer et publier des produits
+                <li>Créer et publier des produits pour la première fois
                     <ul>
                         <li>
                             <p><b>Solution</b></p>
@@ -132,11 +132,11 @@
                             </p>
                             <br>
                             <div class="alert alert-primary" role="alert">
-                                <strong>A savoir : </strong>tant que vous ne faites pas l'action de publication vos produits ne peuvent pas être visible par votre distributeur. Tout ce que vous faites sur cette plateforme vous est entièrement confidentiel.
+                                <strong>A savoir : </strong>tant que vous ne faites pas l'action de publication vos produits ne peuvent pas être visibles par votre distributeur. Tout ce que vous faites sur cette plateforme vous est entièrement confidentiel.
                             </div>
-                            <p>Pour chacune des étapes ci-dessus vous pouvez utiliser l'assistant pour vous aider à vous guider. Pour la première étape, la création de produits dans l'interface, il existe <b>différentes méthodes de création de produits en fonction de votre besoin</b>.</p>
+                            <p>Pour chacune des étapes ci-dessus vous pouvez utiliser l'assistant pour vous aider à vous guider. Pour la première étape, la création de produit dans l'interface, il existe <b>différentes méthodes de création de produit en fonction de votre besoin</b>.</p>
                             <br>
-                            <p>Cliquez sur le bouton revenir à l'assistant en haut à droite et sélectionnez le tutoriel <b>Créer des produits</b> dans la section "Se former" puis faites de même pour les autres étapes.</p>
+                            <p>Cliquez sur le bouton "Revenir à l'assistant" en haut à droite et sélectionnez le tutoriel <b>Créer des produits</b> dans la section "Se former" puis faites de même pour les autres étapes.</p>
                             <br>
                             <p>Très bonne publication.</p>
                         </li>
@@ -270,6 +270,8 @@
                                                                 <li>Puis cliquez sur Mettre à jour.</li>
                                                                 </ol>
                                                                 <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                                <hr>
+                                                                <p class="mb-0">Si le problème persiste utilisez l'assistant à nouveau jusqu'à ce que que le problème soit résolu.</p>
                                                             </div>
                                                         </li>
                                                     </ul>
@@ -288,6 +290,8 @@
                                                                 <li>Puis cliquez sur Mettre à jour.</li>
                                                                 </ol>
                                                                 <p>Enfin fermez et redémarrez votre navigateur.</p>
+                                                                <hr>
+                                                                <p class="mb-0">Si le problème persiste utilisez l'assistant à nouveau jusqu'à ce que que le problème soit résolu.</p>
                                                             </div>
                                                         </li>
                                                     </ul>
@@ -305,6 +309,8 @@
                                                 <h4 class="alert-heading">J'ai une solution!</h4>
                                                 <p>Installez google Chrome : <a href="https://www.google.fr/chrome">https://www.google.fr/chrome</a></p>
                                                 <p>Google Chrome est obligatoire pour la bonne utilisation de la plateforme.</p>
+                                                <hr>
+                                                <p class="mb-0">Si le problème persiste utilisez l'assistant à nouveau jusqu'à ce que que le problème soit résolu.</p>
                                             </div>                                            
                                         </li>
                                     </ul>
