--- a/index.html
+++ b/index.html
@@ -153,7 +153,47 @@
                         <li>Quelle méthode souhaitez-vous utiliser?
                             <ul>
                                 <li>Je veux créer des produits directement dans l'interface</li>
-                                <li>Je veux télécharger un template et travailler sur Excel</li>
+                                <li>Je veux télécharger un template et travailler sur Excel
+                                    <ul>
+                                        <li>
+                                            <p><b>Tutoriel</b></p>
+                                            <br>
+                                            <p>Cette méthode vous permet de télecharger un fichier Excel dans le format de Fnac Marketplace.</p>
+                                            <br>
+                                            <h2>Etape 1</h2>
+                                            <p>Télécharger le fichier Excel en cliquant sur le bouton ci-dessous :</p>
+                                            <br>
+                                            <button class="btn btn-primary">Télécharger le fichier Excel Fnac Marketplace</button>
+                                            <br>
+                                            <br>
+                                            <h2>Etape 2</h2>
+                                            <p>Ouvrez le fichier et complétez le comme indiqué</p>
+                                            <br>
+                                            <div class="alert alert-warning">
+                                                <h4 class="alert-heading">Important!</h4>
+                                                <p>Ne modifiez pas l'ordre des colonnes ou le nom des onglets.</p>
+                                            </div>
+                                            <h2>Etape 3</h2>
+                                            <p>Une fois votre saisie terminée, vous devez réimporter le fichier dans l'interface. Pour ce faire :</p>
+                                            <ol>
+                                                <li>Dans le menu central cliquez sur <b>Classification</b></li>
+                                                <li>Cliquez ensuite sur le bouton bleu <b>Actions</b> en haut à droite.</li>
+                                                <li>Dans actions cliquez sur <b>Importer</b></li>
+                                                <li>Cliquez ensuite sur <b>Importer le template Fnac Marketplace</b> et cliquez sur <b>Suivant</b></li>
+                                                <li>Cliquez ensuite sur le bouton bleu <b>Importer</b></li>
+                                            </ol>
+                                            <p>L'import de votre fichier produit est lancé. Pour suivre son avancement, cliquez sur bouton <b>Tâches</b> dans le menu en haut à droite.</p>
+                                            <br>
+                                            <div class="alert alert-warning">
+                                                <h4 class="alert-heading">Important!</h4>
+                                                <p>Si vous ne voyez pas votre import dans la liste des tâches, assurez vous de n'avoir aucun filtre de sélectionné comme dans la capture d'écran suivante : </p>
+                                            </div>
+                                            <div class="alert alert-info">
+                                                <p>Pour information nous travaillons actuellement à donner plus de visibilité sur l'état d'avancement de l'import : nombre de produits déjà importés, visibilité sur les erreurs et les corrections à apporter... c'est pour bientôt!</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </li>
                                 <li>J'ai un fichier dans mon format que je souhaite importer</li>
                                 <li>Je ne sais pas répondre, aidez-moi à choisir
                                     <ul>
