images import excel

--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
                                             <br>
                                             <div class="alert alert-warning">
                                                 <h4 class="alert-heading">Important!</h4>
-                                                <p>Si vous ne voyez pas votre import dans la liste des tâches, assurez vous de n'avoir aucun filtre de sélectionné comme dans la capture d'écran suivante : </p>
+                                                <p>Si vous ne voyez pas votre import dans la liste des tâches, assurez vous de n'avoir aucun filtre de sélectionné comme dans la capture d'écran suivante : 
+                                                    <br>
+                                                    <img src="images/tasks_import.jpg" alt="" width="100%">
+                                                </p>
                                             </div>
                                             <div class="alert alert-info">
                                                 <p>Pour information nous travaillons actuellement à donner plus de visibilité sur l'état d'avancement de l'import : nombre de produits déjà importés, visibilité sur les erreurs et les corrections à apporter... c'est pour bientôt!</p>
