--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                             <h2>Etape 1</h2>
                                             <p>Télécharger le fichier Excel en cliquant sur le bouton ci-dessous :</p>
                                             <br>
-                                            <button class="btn btn-primary">Télécharger le fichier Excel Fnac Marketplace</button>
+                                            <a target="_blank" href="https://productlive.blob.core.windows.net/import/8d9cf79287e93f5b92cd90d7abbb94edd6927dec/import_template_fnac.xlsx" class="btn btn-primary">Télécharger le fichier Excel Fnac Marketplace</a>
                                             <br>
                                             <br>
                                             <h2>Etape 2</h2>
